--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,5 +12,7 @@
         <button type="button" th:onclick="|${#strings.replace(formula.name, ' ', '')}()|">Calculate</button>
     </div>
 
+    <script th:src="@{/js/formulas.js}" type="text/javascript"></script>
+
 </body>
 </html>
