--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,11 +11,19 @@
 <body>
 
     <div class="form-group" th:each="formula : ${formulas}">
-        <p1 th:text="${formula.name}"></p1>
+        <p th:id="${formula.id}" th:text="${formula.name}"></p>
 
         <br/>
 
-        <input class="form-control" th:each="parameter : ${formula.parameters}" type="text" th:id="|${formula.name} - ${parameter}|" th:name="|${formula.name} - ${parameter}|" th:placeholder="${parameter}"/>
+        <form action=""></form>
+        <th:block th:each="parameter : ${formula.parameters}">
+            <input class="form-control" type="text"
+                   th:id="${formula.id}"
+                   th:name="|${formula.name} - ${parameter}|"
+                   th:placeholder="${parameter}"/>
+
+            <img th:id="|${parameter}|" th:src="@{/images/chefbot.svg}" height="60px"/>
+        </th:block>
 
         <button type="button" th:onclick="|${#strings.replace(formula.name, ' ', '')}()|">Calculate</button>
 
