--- a/src/main/resources/static/css/darkly.css
+++ b/src/main/resources/static/css/darkly.css
@@ -171,7 +171,7 @@ sup {
 }
 
 a {
-  color: #00bc8c;
+  color: lightyellow;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
