Successfully completed AJAX call for child formula.  Still need to clean up method and HTML insertion, though.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 
         <br/>
 
-        <form action=""></form>
+        <!--<form action=""></form>-->
         <!--<th:block th:each="parameter : ${formula.parameters}">
             <input class="form-control" type="text"
                    th:id="${formula.id}"
