Made alternate index views to test different layouts.

--- a/src/main/resources/static/css/darkly.css
+++ b/src/main/resources/static/css/darkly.css
@@ -240,10 +240,10 @@ th {
   text-align: inherit;
 }
 
-label {
+/*label {
   display: inline-block;
   margin-bottom: .5rem;
-}
+}*/
 
 button {
   border-radius: 0;
@@ -1967,7 +1967,7 @@ pre code {
 
 .form-control {
   /*display: block;*/
-  width: 12%;
+  width: 200px;
   padding: 0.375rem 0.75rem;
   font-size: 0.9375rem;
   line-height: 1.5;
@@ -1975,7 +1975,7 @@ pre code {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid transparent;
-  border-radius: 0.25rem;
+  border-radius: 1.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
