--- a/src/main/resources/templates/index3.html
+++ b/src/main/resources/templates/index3.html
@@ -22,27 +22,33 @@
         </a>
     </nav>
 
-    <div th:each="formula : ${formulas}" th:id="${formula.id}" class="formula-box">
+    <div th:each="formula : ${formulas}" th:id="|topLevel-${formula.id}|" th:name="${formula.name}" class="formula-box">
 
         <h1 th:id="|name-${formula.id}|" th:text="${formula.name}"></h1>
 
-        <div th:each="childFormula : ${formula.childFormulas}" class="form-group form-inline">
+        <th:block th:each="childFormula : ${formula.childFormulas}" th:id="|children-${formula.id}|" class="form-group form-inline">
             <label th:for="|input-${childFormula.id}|" th:text="${childFormula.name}"></label>
-            <div>
+            <!--<div>-->
                 <input type="text" th:id="|input-${childFormula.id}|"/>
 
                 <img th:id="|image-${childFormula.id}|"
                      th:if="${childFormula.hasChildren}" th:src="@{/images/drill_arrow.svg}"
                      height="30px"
                      th:onclick="|getChildFormula(${childFormula.id}); this.style.display = 'none';|"/>
-            </div>
-        </div>
+            <br/>
+            <!--</div>-->
+        </th:block>
 
-
-        <label th:for="|result-${formula.id}|">Result:</label>
+        <br/>
+        <label th:for="|result-${formula.id}|">Result:  </label>
         <h2 type="text" th:id="|result-${formula.id}|"></h2>
 
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script th:src="@{/js/formulas.js}" type="text/javascript"></script>
+    <script th:src="@{/js/serviceCalls.js}" type="text/javascript"></script>
+    <script th:src="@{/js/localStorageSeeding.js}" type="text/javascript"></script>
 
 </body>
 </html>
