--- a/src/main/resources/templates/index3.html
+++ b/src/main/resources/templates/index3.html
@@ -22,13 +22,28 @@
         </a>
     </nav>
 
+    <form id="searchCategoryForm" action="/" method="get">
+        <div>
+            <label for="searchCategory">Category:</label>
+            <select id="searchCategory" name="searchCategory">
+                <option value="" ></option>
+                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
+            </select>
+
+            <label for="searchName">Formula Name:</label>
+            <input type="text" id="searchName" name="searchName"/>
+            
+        </div>
+        <button type="submit">Search</button>
+    </form>
+
     <div th:each="formula : ${formulas}" th:id="|topLevel-${formula.id}|" th:name="${formula.name}" class="formula-box">
 
         <h1 th:id="|name-${formula.id}|" th:text="${formula.name}"></h1>
 
         <th:block th:each="childFormula : ${formula.childFormulas}" th:id="|children-${formula.id}|" class="form-group form-inline">
             <label th:for="|input-${childFormula.id}|" th:text="${childFormula.name}"></label>
-                <input type="text" th:id="|input-${childFormula.id}|"/>
+                <input type="number" th:id="|input-${childFormula.id}|"/>
 
                 <img th:id="|image-${childFormula.id}|"
                      th:if="${childFormula.hasChildren}" th:src="@{/images/drill_arrow.svg}"
@@ -44,8 +59,8 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script th:src="@{/js/formulas.js}" type="text/javascript"></script>
     <script th:src="@{/js/serviceCalls.js}" type="text/javascript"></script>
+    <script th:src="@{/js/formulas.js}" type="text/javascript"></script>
     <script th:src="@{/js/localStorageSeeding.js}" type="text/javascript"></script>
 
 </body>
